# emsenv

./: CMakeLists.txt  README.md
cmake/: ems_envConfig.cmake.in  emsenvConfig.cmake.in
src/: lib.c
